--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
   margin: 0 auto;
   justify-content: center;
   padding: 40px;
-  width: 60vw;
+  width: 80%;
   background-color: rgb(255, 255, 255);
   border: 1px solid rgb(230, 230, 230);
 }
