--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
   margin: 0 auto;
   justify-content: center;
   padding: 40px;
-  width: 80%;
+  width: 30%;
   background-color: rgb(255, 255, 255);
   border: 1px solid rgb(230, 230, 230);
 }
@@ -37,4 +37,10 @@ body {
 
 .for_links a:hover {
   text-decoration: underline;
+}
+
+@media screen and (max-width: 992px) {
+  .container {
+    width: 90%;
+  }
 }
